removing intermediate object creation